fix spacing

--- a/src/components/grid/AccountProfile/style.scss
+++ b/src/components/grid/AccountProfile/style.scss
@@ -1,5 +1,5 @@
 .accountProfile {
-  padding: 0 15px 10px;
+  padding: 15px 15px 10px;
   * {
     color: #737373;
   }
