--- a/src/components/grid/AccountProfile2/style.scss
+++ b/src/components/grid/AccountProfile2/style.scss
@@ -1,5 +1,5 @@
 .accountProfile {
-  padding: 0 15px 10px;
+  padding: 15px 15px 10px;
   * {
     color: #737373;
   }
@@ -7,7 +7,6 @@
     background: #fff;
     border-radius: 10px;
     padding: 20px;
-    margin-bottom: 10px;
     .user {
       display: flex;
       width: 100%;
