--- a/src/components/grid/AccountProfile3/style.scss
+++ b/src/components/grid/AccountProfile3/style.scss
@@ -1,5 +1,5 @@
 .accountProfile {
-  padding: 0 15px 0;
+  padding: 15px 15px 0;
   * {
     color: #737373;
   }
