--- a/src/components/grid/NewsAndEvents/style.scss
+++ b/src/components/grid/NewsAndEvents/style.scss
@@ -1,6 +1,6 @@
 .newsAndEvents {
   background: #fff;
-  margin: 0 15px 10px;
+  margin: 0 15px 15px;
   border-radius: 10px;
   * {
     color: #737373;
